examples/test/testpolicy16239.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16239
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key17: value35
      key48: value32
      key30: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value27
          key18: value18
          key23: value40
      podSelector:
        matchLabels:
          key37: value34
